[gd_scene load_steps=14 format=3 uid="uid://b2qah8xmjv8m2"]

[ext_resource type="Script" path="res://UI/Menu/ItemMenu.gd" id="1_l64w7"]
[ext_resource type="Texture2D" uid="uid://d2pe2p630dptw" path="res://UI/Menu/ItemMenuTop.png" id="3_eox7t"]
[ext_resource type="Texture2D" uid="uid://cnsr6c6kh3cx5" path="res://UI/Menu/ItemMenuBottom.png" id="4_gv7t6"]
[ext_resource type="FontFile" uid="uid://bqtqh8vj648s0" path="res://UI/Fonts/slkscrb.ttf" id="5_6faio"]
[ext_resource type="FontFile" uid="uid://mq727r4s71cw" path="res://UI/Fonts/slkscr.ttf" id="6_7p2o2"]
[ext_resource type="AudioStream" uid="uid://cxtbm4issc77h" path="res://UI/Menu/MenuExit.mp3" id="6_gx0ux"]
[ext_resource type="AudioStream" uid="uid://dwu6p5o0ru4ha" path="res://UI/Menu/MenuSelect.mp3" id="7_fljc6"]

[sub_resource type="LabelSettings" id="LabelSettings_tmrii"]
font = ExtResource("5_6faio")

[sub_resource type="LabelSettings" id="LabelSettings_fwpu6"]
font = ExtResource("6_7p2o2")

[sub_resource type="Animation" id="Animation_udqaf"]
resource_name = "CloseMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0296407,
"start_offset": 0.0326653,
"stream": ExtResource("6_gx0ux")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_f3em7"]
resource_name = "OpenMenu"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 1.7588,
"start_offset": 0.0395645,
"stream": ExtResource("7_fljc6")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_vtn6c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3hx5q"]
_data = {
"CloseMenu": SubResource("Animation_udqaf"),
"OpenMenu": SubResource("Animation_f3em7"),
"RESET": SubResource("Animation_vtn6c")
}

[node name="ItemMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 30.0
offset_right = -4.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_l64w7")

[node name="MenuTop" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 97.0
texture = ExtResource("3_eox7t")

[node name="Screen" type="TextureRect" parent="MenuTop"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 94.0

[node name="NameLabel" type="Label" parent="MenuTop"]
layout_mode = 0
offset_left = 3.0
offset_top = 78.0
offset_right = 297.0
offset_bottom = 95.0
text = "Empty"
label_settings = SubResource("LabelSettings_tmrii")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MenuBottom" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 264.0
texture = ExtResource("4_gv7t6")

[node name="StatsLabel" type="Label" parent="MenuBottom"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 161.0
text = "You do not have any items"
label_settings = SubResource("LabelSettings_fwpu6")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(294, 91)

[node name="Base" type="Node3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -200, 0, 0)

[node name="Camera3D" type="Camera3D" parent="SubViewport/Base"]
transform = Transform3D(-4.37114e-08, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 1.13133e-08, -4.2222e-08, 0, 0, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/Base"]
transform = Transform3D(-4.37114e-08, -0.0871557, 0.996195, 0, 0.996195, 0.0871557, -1, 3.8097e-09, -4.35451e-08, 1, 5, 0)
light_energy = 6.0
spot_range = 50.0
spot_angle = 65.0

[node name="Node3D" type="Node3D" parent="SubViewport/Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, -1, 2.10473)

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3hx5q")
}
autoplay = "OpenMenu"
